--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
 					<div class="large-12 columns">
 						<div class="button-group" style="float: right;">
 							<a href="#" class="small button secondary duration-hour">6 Hrs</a>
+							<a href="#" class="small button secondary duration-hour12">12 Hrs</a>
 							<a href="#" class="small button secondary duration-day">Day</a>
 							<a href="#" class="small button secondary duration-week">Week</a>
 							<a href="#" class="small button secondary duration-month">Month</a>
